# compiladores

./: arquivo.c
Trabalho 1/: CHANGELOG.md  Testes.txt  Trabalho1.cabal  teste1.j
Trabalho 1/app/: Main.hs
Trabalho 1/app/Modules/: ArithmeticExpressions.hs  BlocksAndCommandLists.hs  BlocksAndCommands.hs  Commands.hs  Expressions.hs  Functions.hs  FunctionsAndParameters.hs  Lexer.hs  LogicalExpressions.hs  Program.hs  ProgramParser.hs  RelationalExpressions.hs  Statements.hs  TestsAndDebugging.hs  Types.hs  VariableDeclarations.hs
Trabalho 1/app/Tests/: ArithmeticExpressionsSpec.hs  BlocksAndCommandListsSpec.hs  CommandsSpec.hs  FunctionsAndParametersSpec.hs  LexerSpec.hs  LexerTest.hs  LogicalExpressionsSpec.hs  ProgramParserSpec.hs  RelationalExpressionsSpec.hs  Tests.hs  VariableDeclarationsSpec.hs
Trabalho 1/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Trabalho 2/: CHANGELOG.md  Trabalho2.cabal  pendente.txt  teste1.j
Trabalho 2/app/: Main.hs
Trabalho 2/app/Modules/Semantico/: AnalisadorComandos.hs  AnalisadorExpressoes.hs  AnalisadorFuncoes.hs  AnalisadorPrincipal.hs  AnalisadorVariaveis.hs  AvisosSemantico.hs  Errors.hs  ErrosSemantico.hs  Tipos.hs  TypeChecking.hs
Trabalho 2/app/Modules/Sintatico/: ArithmeticExpressions.hs  BlocksAndCommands.hs  FunctionsAndParameters.hs  Lexer.hs  LogicalExpressions.hs  ProgramParser.hs  RelationalExpressions.hs  Types.hs  VariableDeclarations.hs
